# pipec

./: .gitignore  CMakeLists.txt  README.md
cmake/: build.cmake  gen_ycm_conf.cmake
include/pipe/: module.h
src/: main.cpp  module.cpp
src/pipe/: string_fmt.p
src/pipe/integral_types/: integral_types.p
tests/: virtual_functions.p
